<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogarActivity"
    >

    <TextView
        android:layout_width="1200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="50dp"
        android:text="@string/entre_com_a_sua_conta"
        android:textColor="@color/medium_pink"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageViewlogotipo"
        android:layout_width="347dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/logotipo" />

    <TextView
        android:layout_width="1200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginRight="50dp"
        android:text="@string/nomedotcc_parte1"
        android:textColor="@color/royal_blue"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="1200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="290dp"
        android:layout_marginRight="20dp"
        android:text="@string/nomedotcc_parte2"
        android:textColor="@color/royal_blue"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViewEmail"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="350dp"
        android:layout_marginRight="50dp"
        android:text="E-mail:"
        android:textSize="18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edtTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="340dp"
        android:layout_marginRight="50dp"
        android:ems="100"
        android:focusable="true"
        android:hint="escreva o seu  e-mail"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/dark_magenta"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtViewSenha"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginRight="50dp"
        android:text="Senha:"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtTextSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="390dp"
        android:layout_marginRight="50dp"
        android:ems="100"
        android:focusable="true"
        android:hint="escreva a sua senha"
        android:inputType="textPassword"
        android:textColorHint="@color/dark_magenta"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnEntrarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="440dp"
        android:text="@string/entrar"
        android:textColor="@color/white"
        android:textSelectHandle="@color/bg_light_magenta"
        android:backgroundTint="@color/medium_blue" />

    <Button
        android:onClick="Registro"
        android:id="@+id/btnCadastrarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="490dp"
        android:text="@string/login_cadastrar"
        android:textColor="@color/white"
        android:textSelectHandle="@color/bg_light_magenta"
        android:backgroundTint="@color/light_green" />



    <Button
        android:id="@+id/btnEsqueceuASenhaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="540dp"
        android:text="@string/login_esqueceu_a_senha"
        android:textColor="@color/white"
        android:textSelectHandle="@color/bg_light_magenta"
        android:backgroundTint="@color/light_orange" />

    <Button
        android:id="@+id/btnLimparLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="590dp"
        android:text="@string/login_limpar"
        android:textColor="@color/white"
        android:textSelectHandle="@color/bg_light_magenta"
        android:backgroundTint="@color/medium_brown" />

    <TextView
        android:id="@+id/txtautores"
        android:layout_width="630dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="650dp"
        android:text="@string/alunos"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="italic" />




</RelativeLayout>